[gd_scene load_steps=11 format=3 uid="uid://dyf1rxj42qmu3"]

[ext_resource type="Script" path="res://Fork.gd" id="1_ifg6n"]
[ext_resource type="Texture2D" uid="uid://cfd20blu6ud54" path="res://assets/baby/poop.png" id="2_tho5n"]
[ext_resource type="PackedScene" uid="uid://ctyptrklqsavv" path="res://CircularProgressBar.tscn" id="5_ref0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sh1nu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmsr3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8yp3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfkha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02rys"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ge8kg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tho5n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c5dt5"]
height = 42.0

[node name="Fork" type="Button"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sh1nu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gmsr3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h8yp3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gfkha")
theme_override_styles/focus = SubResource("StyleBoxEmpty_02rys")
script = ExtResource("1_ifg6n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 5.99999)
scale = Vector2(1.21429, 4.5)
sprite_frames = SubResource("SpriteFrames_ge8kg")

[node name="CleanTimer" type="Timer" parent="."]
one_shot = true

[node name="CircularProgressBar" parent="." node_paths=PackedStringArray("timer") instance=ExtResource("5_ref0b")]
layout_mode = 0
mouse_filter = 2
timer = NodePath("../CleanTimer")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 15)
shape = SubResource("CapsuleShape2D_c5dt5")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CleanTimer" to="." method="_on_clean_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
